@@ -2,9 +2,8 @@ import logging
 import subprocess
 
 from borgmatic.execute import execute_command
-from borgmatic.logger import get_logger
 
-logger = get_logger(__name__)
+logger = logging.getLogger(__name__)
 
 
 INFO_REPOSITORY_NOT_FOUND_EXIT_CODE = 2
