@@ -1,9 +1,8 @@
 import logging
 
 from borgmatic.execute import execute_command
-from borgmatic.logger import get_logger
 
-logger = get_logger(__name__)
+logger = logging.getLogger(__name__)
 
 
 def _make_prune_flags(retention_config):
