@@ -1,5 +1,6 @@
 1.3.7.dev0
  * #196: Fix for unclear error message for invalid YAML merge include.
+ * #197: Don't color syslog output.
  * Change default syslog verbosity to show errors only.
 
 1.3.6
